Added possibility to specify location for wsdl files, made Operations non singleton